<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_home">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"

            android:title="@string/menuHome" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_baseline_shop_24"
            android:title="@string/menushop" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"

            android:title="@string/menuhis" />
       <!-- <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_baseline_star_border_24"
            android:title="รีวิว" /> -->
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menuUser"/>
    </group>

</menu>
