<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopPage2Fragment"
    android:background="@drawable/bg">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewcomment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/edittextcomment4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            app:layout_constraintVertical_bias="0.0"
            app:spanCount="1"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/textView31"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/ic_baseline_arrow_downward_24"
            android:text="@string/Comment"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btnlike"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnaddtocart2"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/addtocart"
            android:textColor="@color/black"
            app:backgroundTint="@color/appBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgpro"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <ImageView
            android:id="@+id/imgpro"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txtnameproshop2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="GG"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgpro"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edittextcomment4"
            android:layout_width="263dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"

            android:layout_marginBottom="68dp"
            android:layout_weight="2"
            android:hint="@string/Comment"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btneditcomment3"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="65dp"
            android:text="@string/Post"
            android:textSize="10sp"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view2"
            style="@style/Divider.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnaddtocart2" />

        <ImageButton
            android:id="@+id/btnlike"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:text="ถูกใจ 5 คน"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txtypeshop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="SunGlasses | GUCCI"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/imgpro"
            app:layout_constraintTop_toBottomOf="@+id/txtnameproshop2" />

        <TextView
            android:id="@+id/txtpriceshop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="10000"
            android:textColor="@color/design_default_color_error"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imgpro"
            app:layout_constraintTop_toBottomOf="@+id/spinnerlensshop2" />

        <Spinner
            android:id="@+id/spinnerlensshop2"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/txtpriceshop2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView43"
            app:layout_constraintTop_toBottomOf="@+id/txtypeshop2" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="31dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="27dp"
            android:text="@string/Lens"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/imgpro"
            app:layout_constraintTop_toBottomOf="@+id/txtypeshop2" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="229dp"
            android:layout_height="277dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            tools:src="@tools:sample/backgrounds/scenic" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>